fixed overlap on team page, moved CSS to main.css

--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,44 @@ body {
 .btn {
 	color: var(--seafoam-green); 
 	border-color: var(--seafoam-green);
-	font-size: 2rem;
+	font-size: 1.5rem;
+}
+
+.card {
+	background-color: var(--dark);
+	border-color: var(--seafoam-green);
+	margin: 1rem;
+}
+
+
+.description {
+	color: white;
+}
+
+.image-left {
+	float: left;
+	margin-right: 1rem;
+}
+
+.image-right {
+	float: right;
+	margin-left: 1rem;
+}
+
+h3 {
+	font-size: 200%;
+}
+
+h4 {
+	font-style: italic;
+	text-decoration: underline;
+	opacity: 80%;
+}
+
+p {
+	font-size: 150%;
+}
+
+.btn-bottom {
+	  padding: 0 1rem 1rem 1rem;
 }
